@@ -125,6 +125,13 @@ let (^) s1 s2 =
   string_blit s2 0 s l1 l2;
   s
 
+(* Character operations -- more in module Char *)
+
+external int_of_char : char -> int = "%identity"
+external unsafe_char_of_int : int -> char = "%identity"
+let char_of_int n =
+  if n < 0 or n > 255 then invalid_arg "char_of_int" else unsafe_char_of_int n
+
 (* Pair operations *)
 
 external fst : 'a * 'b -> 'a = "%field0"
