@@ -11,7 +11,7 @@
 
 (* $Id$ *)
 
-let version = "2.00+5"
+let version = "2.01"
 
 let standard_library =
   try
